# ansible-role-networkmanager

./: .pre-commit-config.yaml  .travis.yml  .yamllint.yml  README.md  pyproject.toml  requirements.yml  tasks.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/tox/: molecule.yml
molecule/vbox/: molecule.yml
tasks/: main.yml
templates/: template.conf.j2
vars/: main.yml
